New entries should be added at the top

2004-05-25 Tweaked TkAgg backend so that canvas.draw() works
	   more like the other backends.  Fixed a bug resulting
	   in 2 draws per figure mangager show().      - JTM

------------------------------------------------------------
2004-05-19 0.54 released - JDH

2004-05-18 Added newline seperated text with rotations to text.Text
           layout - JDH

2004-05-16 Added fast pcolor using PolyCollections.  - JDH

2004-05-14 Added fast polygon collections - changed scatter to use
           them.  Added multiple symbols to scatter.  10x speedup on
	   large scatters using *Agg and 5X speedup for ps. - JDH

2004-05-14 On second thought... created an "nx" namespace in 
	   in numerix which maps type names onto typecodes
	   the same way for both numarray and Numeric.  This
	   undoes my previous change immediately below. To get a
	   typename for Int16 useable in a Numeric extension: 
	   say nx.Int16. - JTM             

2004-05-15 Rewrote transformation class in extension code, simplified
           all the artist constructors - JDH

2004-05-14 Modified the type definitions in the numarray side of
	   numerix so that they are Numeric typecodes and can be
	   used with Numeric compilex extensions.  The original
	   numarray types were renamed to type<old_name>.    - JTM

2004-05-06 Gary Ruben sent me a bevy of new plot symbols and markers.
           See matplotlib.matlab.plot - JDH

2004-05-06 Total rewrite of mathtext - factored ft2font stuff out of
           layout engine and defined abstract class for font handling
           to lay groundwork for ps mathtext.  Rewrote parser and made
           layout engine much more precise.  Fixed all the layout
           hacks.  Added spacing commands \/ and \hspace.  Added
           composite chars and defined angstrom. - JDH

2004-05-05 Refactored text instances out of backend; aligned
           text with arbitrary rotations is now supported - JDH
