@@ -38,7 +38,7 @@ lines.linestyle   : -       # solid line
 lines.color       : b       # blue; color format or hex string
 lines.markersize  : 6       # markersize, in points
 lines.antialiased : True    # render lines in antialised (no jaggies)
-lines.data_clipping : True  # Use data clipping in addition to viewport
+lines.data_clipping : False  # Use data clipping in addition to viewport
                             # clipping.  Useful if you plot long data
                             # sets with only a fraction in the viewport
 
